logs/session.log
[2026-04-05 10:04:04] Attempt: 1 | Result: SUCCESS | Error: 
[2026-04-05 18:40:02] Attempt: 1 | Result: CAGE FAILURE | Error: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/app/filter_numbers_skill.py", line 40
    [Output: - 30]
           ^
SyntaxError: invalid syntax

[2026-04-05 18:41:12] Attempt: 2 | Result: SUCCESS | Error: 
[2026-04-06 21:01:07] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-06 21:01:19] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-07 13:13:52] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-07 13:21:41] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-07 13:22:11] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-07 13:24:36] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-07 13:29:29] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-07 13:34:38] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-07 13:35:03] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-07 13:35:17] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-07 13:41:52] Attempt: N/A | Result: ORCHESTRATED (Reused) | Error: Matched skill: filter_divisible_skill.py
[2026-04-07 13:45:10] Attempt: 1 | Result: REVIEW APPROVED | Error: 
[2026-04-07 13:45:35] Attempt: 1 | Result: GENERATED (New) - SUCCESS | Error: 
[2026-04-08 00:27:05] Attempt: 1 | Result: REVIEW APPROVED | Error: 
[2026-04-08 00:27:09] Attempt: 1 | Result: GENERATED (New) - CAGE FAILURE | Error: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/app/get_bitcoin_price.py", line 13, in <module>
    import requests
ModuleNotFoundError: No module named 'requests'

[2026-04-08 00:28:23] Attempt: 2 | Result: REVIEW APPROVED | Error: 
[2026-04-08 00:29:03] Attempt: 2 | Result: GENERATED (New) - LOGIC ERROR | Error: The output indicates a network error occurred ([Errno -2] Name or service not known) and failed to retrieve the actual Bitcoin price.
[2026-04-08 00:31:25] Attempt: 3 | Result: REVIEW APPROVED | Error: 
[2026-04-08 00:31:28] Attempt: 3 | Result: GENERATED (New) - CAGE FAILURE | Error: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/app/get_bitcoin_price.py", line 13, in <module>
    import requests
ModuleNotFoundError: No module named 'requests'

[2026-04-08 00:31:28] Attempt: 3 | Result: FATAL | Error: Max retries reached
[2026-04-08 21:11:57] Attempt: 1 | Result: REVIEW REJECTED | Error: The code fails to logically address the task because it returns a hardcoded value instead of programmatically retrieving the real-time price. A function designed to 'find the current price' of a volatile asset like Bitcoin should utilize an API or external data source to ensure the information is accurate and up-to-date.
[2026-04-08 21:13:23] Attempt: 2 | Result: REVIEW REJECTED | Error: The code fails to logically address the task because it returns a hardcoded, static value for the price of Bitcoin. Since the price of Bitcoin is highly volatile and changes constantly, providing a hardcoded string does not fulfill the requirement of finding the 'current' price. The implementation should ideally use an API (e.g., CoinGecko, Binance, or Coinbase) to fetch real-time data.
[2026-04-08 21:13:23] Attempt: 2 | Result: FATAL | Error: Max retries reached
[2026-04-09 19:18:18] Attempt: 1 | Result: REVIEW APPROVED | Error: 
[2026-04-09 19:18:33] Attempt: 1 | Result: GENERATED (New) - SUCCESS | Error: 
[2026-04-09 20:09:23] Attempt: 1 | Result: REVIEW APPROVED | Error: 
[2026-04-09 20:09:35] Attempt: 1 | Result: GENERATED (New) - SUCCESS | Error: 
